crates/ruff_python_parser/src/lalrpop/snapshots/ruff_python_parser__lalrpop__context__tests__aug_assign_attribute.snap
---
source: crates/ruff_python_parser/src/lalrpop/context.rs
expression: parse_ast
---
[
    AugAssign(
        StmtAugAssign {
            range: 0..16,
            target: Attribute(
                ExprAttribute {
                    range: 0..3,
                    value: Name(
                        ExprName {
                            range: 0..1,
                            id: "x",
                            ctx: Load,
                        },
                    ),
                    attr: Identifier {
                        id: "y",
                        range: 2..3,
                    },
                    ctx: Store,
                },
            ),
            op: Add,
            value: Tuple(
                ExprTuple {
                    range: 7..16,
                    elts: [
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 8..9,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 11..12,
                                value: Int(
                                    2,
                                ),
                            },
                        ),
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 14..15,
                                value: Int(
                                    3,
                                ),
                            },
                        ),
                    ],
                    ctx: Load,
                    parenthesized: true,
                },
            ),
        },
    ),
]
