crates/ruff_python_parser/src/lalrpop/snapshots/ruff_python_parser__lalrpop__context__tests__aug_assign_name.snap
---
source: crates/ruff_python_parser/src/lalrpop/context.rs
expression: parse_ast
---
[
    AugAssign(
        StmtAugAssign {
            range: 0..6,
            target: Name(
                ExprName {
                    range: 0..1,
                    id: "x",
                    ctx: Store,
                },
            ),
            op: Add,
            value: NumberLiteral(
                ExprNumberLiteral {
                    range: 5..6,
                    value: Int(
                        1,
                    ),
                },
            ),
        },
    ),
]
