crates/ruff_python_parser/src/lalrpop/snapshots/ruff_python_parser__lalrpop__context__tests__aug_assign_subscript.snap
---
source: crates/ruff_python_parser/src/lalrpop/context.rs
expression: parse_ast
---
[
    AugAssign(
        StmtAugAssign {
            range: 0..17,
            target: Subscript(
                ExprSubscript {
                    range: 0..4,
                    value: Name(
                        ExprName {
                            range: 0..1,
                            id: "x",
                            ctx: Load,
                        },
                    ),
                    slice: Name(
                        ExprName {
                            range: 2..3,
                            id: "y",
                            ctx: Load,
                        },
                    ),
                    ctx: Store,
                },
            ),
            op: Add,
            value: Tuple(
                ExprTuple {
                    range: 8..17,
                    elts: [
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 9..10,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 12..13,
                                value: Int(
                                    2,
                                ),
                            },
                        ),
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 15..16,
                                value: Int(
                                    3,
                                ),
                            },
                        ),
                    ],
                    ctx: Load,
                    parenthesized: true,
                },
            ),
        },
    ),
]
